Bug 1353028: Fix broken extmap validation logic. r=drno

MozReview-Commit-ID: Egvr4ppNZ5Q